# Qt6-DeepSeek-Demo

./: .gitignore  BubbleFrame.cpp  BubbleFrame.h  CMakeLists.txt  Chat.h  ChatItemBase.cpp  ChatItemBase.h  ChatView.cpp  ChatView.h  README.en.md  README.md  TextBubble.cpp  TextBubble.h  deepseek.css  global.cpp  global.h  widget.cpp  widget.h  widget.ui
include/: Chat.h  widget.h
src/: Chat.cpp  widget.cpp  widget.ui
